# SimplePyLogger

./: .releaserc  CHANGELOG.md  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml  sonarqube.yml
splogger/: __init__.py  loggers.py
